<?xml version="1.0"?>
<package format="3">
  <name>turtle_circle_cpp</name>
  <version>0.0.1</version>
  <description>Move turtle in square path</description>

  <maintainer email="hilal@ambatron.local">Hilal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
